--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto = update
